# mcp_server_client

./: .env.example  .gitignore  Dockerfile.mcp_server1  Dockerfile.mcp_server2  README.md  docker-compose.yaml  pyproject.toml  run.sh  upload_to_localstack.py
config/: nginx.local.conf
workspace/api/: .env.example  README.md  package.json
workspace/api/mcp-client-poc/: Dockerfile  package.json
workspace/api/mcp-client-poc/src/: app.module.ts  main.ts
workspace/api/mcp-client-poc/src/api/: api.module.ts
workspace/api/mcp-client-poc/src/config/: env.config.ts
workspace/api/mcp-client-poc/src/langchain/: langchain.module.ts
workspace/api/src/: app.module.ts  main.ts
workspace/api/src/common/dto/: chat-request.dto.ts  chat-response.dto.ts
workspace/api/src/common/interfaces/: message.interface.ts  rag-result.interface.ts
workspace/api/src/config/: config.module.ts  config.service.ts
workspace/api/src/modules/agent/: agent.module.ts  agent.service.ts
workspace/api/src/modules/chat/: chat.controller.ts  chat.module.ts  chat.service.ts
workspace/api/src/modules/rag/: rag.module.ts  rag.service.ts
workspace/api/src/modules/tool-agent/: tool-agent.module.ts  tool-agent.service.ts
workspace/api/src/shared/database/: database.service.ts
workspace/data_processing/: data_processing.ipynb
workspace/data_processing/data/: vector_ticket_data.json
workspace/frontend/: Dockerfile  app.py  citations.py  pyproject.toml
workspace/servers/: Dockerfile.mcp_server1  Dockerfile.mcp_server3  mcp_server_1.py  mcp_server_2.py  mcp_server_3.py
(+13 files in other folders)
